--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,28 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.116"
 tokio = { version = "1.36.0", features = ["full"] }
 toml = "0.8.12"
+
+# The profile that 'cargo dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
+
+# Config for 'cargo dist'
+[workspace.metadata.dist]
+# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
+cargo-dist-version = "0.13.2"
+# CI backends to support
+ci = ["github"]
+# The installers to generate for each app
+installers = []
+# Target platforms to build apps for (Rust target-triple syntax)
+targets = [
+    "aarch64-apple-darwin",
+    "x86_64-apple-darwin",
+    "x86_64-unknown-linux-gnu",
+    "x86_64-pc-windows-msvc",
+]
+# Publish jobs to run in CI
+pr-run-mode = "skip"
+windows-archive = ".zip"
+unix-archive = ".zip"
