--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ dashmap = "5.5.3"
 inquire = "0.7.4"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.116"
+serde_repr = "0.1.19"
 tokio = { version = "1.36.0", features = ["full"] }
 toml = "0.8.12"
 
